# bim-to-print

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GH_NODE_MAP.md
docs/research/: INDEX.md  compas_house_viz.html  decision-matrix.md  demo_house.ifc  evidence-of-suitability-dossier.md  financial-model-template.md  grant-proposal-template.md  house_floorplan.ifc  ifc_viewer.html  lab-certification-directory.md  overview.html  pilot-roadmap.md  regulatory-pathway.md  software-stack.md  sydney-market-landscape.md  vendor-database.md
examples/: compas_house.gcode  compas_pipeline.py  compas_viz.py  demo_house.gcode  demo_house.json  demo_wall.json  gcode_to_svg.py  house_floorplan.json  render_gcode.py  run_house.py  toolpath_viz.html
grasshopper/: demo_wall.gh
scripts/: _blender_render_inner.py  _blender_test.py  blender_render.py  deploy_pipeline.sh  enhance_render.py  generate_floorplan.py  generate_ifc.py  qa_assess_plan.py
src/bim_to_print/: __init__.py  cli.py  gcode_writer.py  gh_definition.py  ifc_reader.py  pipeline.py  slicer.py  toolpath.py
tests/: test_pipeline.py
