[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bim-to-print"
version = "0.2.0"
description = "Automated BIM-to-print pipeline — IFC/GH → custom slicer → G-code for 3D concrete printing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "networkx>=2.8",
    "numpy>=1.24",
    "click>=8.0",
    "pyclipper>=1.3",
    "matplotlib>=3.10.9",
    "compas>=2.15",
    "compas-slicer",
]

[project.optional-dependencies]
ifc = ["ifcopenshell>=0.7"]
gh = ["lxml>=4.9"]
all = ["ifcopenshell>=0.7", "lxml>=4.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
bim2print = "bim_to_print.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
compas-slicer = { git = "https://github.com/compas-dev/compas_slicer.git", rev = "v0.8.0" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]
